
AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

this_includedir=${includedir}/${subdir}
this_include_HEADERS = \
    all.hpp \
    claytoncopularng.hpp \
    convolvedstudentt.hpp \
	dynamiccreator.hpp \
    expm.hpp \
    farliegumbelmorgensterncopularng.hpp \
    fireflyalgorithm.hpp \
    frankcopularng.hpp \
    gaussiancopulapolicy.hpp \
    hybridsimulatedannealing.hpp \
    hybridsimulatedannealingfunctors.hpp \
    inversecumulativerng_multithreaded.hpp \
    inversecumulativersg_multithreaded.hpp \
    isotropicrandomwalk.hpp \
    laplaceinterpolation.hpp \
    latentmodel.hpp \
    levyflightdistribution.hpp \
    mersennetwister_multithreaded.hpp \
    moorepenroseinverse.hpp \
    multidimintegrator.hpp \
    multidimquadrature.hpp \
    numericaldifferentiation.hpp \
    particleswarmoptimization.hpp \
    piecewisefunction.hpp \
    piecewiseintegral.hpp \
    polarstudenttrng.hpp \
    randomsequencegenerator_multithreaded.hpp \
    rngtraits_multithreaded.hpp \
    tcopulapolicy.hpp \
    zigguratrng.hpp

libMath_la_SOURCES = \
    convolvedstudentt.cpp \
    dynamiccreator.cpp \
    expm.cpp \
    fireflyalgorithm.cpp \
    gaussiancopulapolicy.cpp \
    mersennetwister_multithreaded.cpp \
    multidimintegrator.cpp \
    multidimquadrature.cpp \
    numericaldifferentiation.cpp \
    particleswarmoptimization.cpp \
    piecewiseintegral.cpp \
    tcopulapolicy.cpp \
    zigguratrng.cpp

noinst_LTLIBRARIES = libMath.la

all.hpp: Makefile.am
	echo "/* This file is automatically generated; do not edit.     */" > $@
	echo "/* Add the files to be included into Makefile.am instead. */" >> $@
	echo >> $@
	for i in $(filter-out all.hpp, $(this_include_HEADERS)); do \
		echo "#include <${subdir}/$$i>" >> $@; \
	done
	echo >> $@
	subdirs='$(SUBDIRS)'; for i in $$subdirs; do \
		echo "#include <${subdir}/$$i/all.hpp>" >> $@; \
	done

